# aosp_kernel_build

./: BUILD.bazel  LICENSE  _setup_env.sh  build.sh  build_test.sh  build_utils.sh  date.bzl  date_wrapper.py
abi/: update_known_abi_breaks.py
gki/: download_from_ci  what_commits_per_release
init/: init_ddk_test.py  repo_wrapper.py
kleaf/: BUILD.bazel  README.md  bazel.py  build_cleaner.py  common.bazelrc  common_kernels.bzl  hermetic_tools.bzl  kernel.bzl  libcap.BUILD  lz4.BUILD  ndk.BUILD  pigz.BUILD  search_and_cp_output.py  spotless_log_regex.txt  toybox.BUILD  update_source_file.bzl  workspace.bzl
kleaf/artifact_tests/: vendor_bootconfig_test.bzl
kleaf/bazelrc/: canary.bazelrc  docs.bazelrc  flags.bazelrc  musl.bazelrc  musl_platform.bazelrc
kleaf/bzlmod/: bazel.MODULE.bazel
kleaf/docs/: BUILD.bazel  abi.md  build_configs.md  compile_commands.md  debugging.md  download_prebuilt.md  errors.md  hermeticity.md  impl.md  kernel_config.md  kleaf.md  lto.md  musl.md  sandbox.md
kleaf/docs/api_reference/: common_kernels.md  hermetic_tools.md  kernel.md  update_source_file.md
kleaf/docs/ddk/: config.md  rules.md  workspace.md  workspace_example.sh
kleaf/impl/: BUILD.bazel  arg_wrapper.cpp  bison_wrapper.bzl  cache_dir.bzl  cache_dir_config_tags.py  cc_binary_host_musl.bzl  check_config.py  check_config_test.py  common_providers.bzl  common_settings.bzl  config_utils.bzl  constants.bzl  debug.bzl  diff.bzl  empty_binary.bzl  extracted_system_dlkm_staging_archive.bzl  file_selector.bzl  gcov_files.bzl  gcov_utils.bzl  gki_artifacts.bzl  hermetic_genrule.bzl  kernel_build.bzl  kernel_compile_commands.bzl  kernel_config.bzl  kernel_config_settings.bzl  kernel_env.bzl  kernel_filegroup.bzl  kernel_filegroup_declaration.bzl  kernel_module.bzl  kernel_module_group.bzl  kernel_modules_install.bzl  kernel_platform_toolchain.bzl  kernel_prebuilt_repo.bzl  kernel_toolchains.bzl  kernel_uapi_headers_cc_library.bzl  kernel_unstripped_modules_archive.bzl  local_repository.bzl  modules_prepare.bzl  native_binary_with_arg.bzl  platform_transition.bzl  (+7 more)
kleaf/impl/abi/: abi_dump.bzl  abi_stgdiff.bzl  dependency_graph.bzl  kernel_abi.bzl  kernel_abi_dist.bzl  update_known_abi_breaks.bzl
kleaf/impl/ddk/: ddk_config.bzl  ddk_headers.bzl  ddk_headers_archive.bzl  ddk_module.bzl  ddk_submodule.bzl  ddk_uapi_headers.bzl  gen_makefiles.py  makefiles.bzl
kleaf/impl/defconfig/: BUILD.bazel  arm64_kasan_sw_tags_defconfig  gcov_defconfig  kasan_any_mode_defconfig  kasan_generic_defconfig  rust_defconfig
kleaf/impl/image/: boot_images.bzl  dtbo.bzl  image_utils.bzl  initramfs.bzl  kernel_images.bzl  kernel_images_replace.bzl  kernel_images_replace.py  or_file.bzl  super_image.bzl  system_dlkm_image.bzl  vendor_boot_image.bzl  vendor_dlkm_image.bzl
kleaf/tests/: BUILD.bazel
kleaf/tests/built_with_ddk_test/: BUILD.bazel  contains_mark_test.bzl  contains_mark_test.py  ddk_made_test.bzl
kleaf/tests/cc_testing/: BUILD.bazel
kleaf/tests/ddk_test/: ddk_config_test.bzl  ddk_headers_test.bzl  makefiles_test.bzl
kleaf/tests/defconfig_test/: BUILD.bazel  build.config.arm64  build.config.x86_64  pre_defconfig_fragments_menuconfig_test.bzl  pre_defconfig_fragments_menuconfig_test.py
kleaf/tests/integration_test/: integration_test.py
kleaf/tests/integration_test/ddk_workspace_test/tests/: BUILD.bazel  files_test.bzl
kleaf/tests/kernel_config_test/: kernel_config_option_test.bzl  kernel_defconfig_fragments_test.bzl
kleaf/tests/merged_kernel_uapi_headers_test/: order_test.bzl
kleaf/tests/native_binary_with_arg_test/: BUILD.bazel  native_binary_with_arg_test.bzl
ttt/: BUILD.bazel
