load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "build.config.arm64",
    "build.config.x86_64",
    "pre_defconfig_fragment",
])

py_test(
    name = "pre_defconfig_fragments_menuconfig_test",
    srcs = ["pre_defconfig_fragments_menuconfig_test.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_abseil_py//absl/testing:absltest",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = [
        "pre_defconfig_fragments_menuconfig_test.bzl",
    ],
    visibility = [
        "//build/kernel/kleaf/docs:__subpackages__",
    ],
)
