# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":native_binary_with_arg_test.bzl", "native_binary_with_arg_test")

cc_binary(
    name = "echo",
    srcs = ["echo.c"],
)

native_binary_with_arg_test(
    name = "echo_single",
    src = ":echo",
    args = ["1"],
)

native_binary_with_arg_test(
    name = "echo_space_in_args",
    src = ":echo",
    args = ["an argument"],
)

native_binary_with_arg_test(
    name = "echo_multiple",
    src = ":echo",
    args = [
        "1",
        "hello, world!",
    ],
)

test_suite(
    name = "native_binary_with_arg_test",
    # include all tests in this package
)
